# artifactcache

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  __init__.py  pyproject.toml  setup.py  tests.py
.github/workflows/: codeql.yml  coverage.yml
artifactcache/: __init__.py  _cachetypes.py  _centralized_location.py  _version.py
artifactcache/huggingface/: .gitignore  __init__.py
artifactcache/huggingface/datasets/: __init__.py
artifactcache/huggingface/tokenizers/: __init__.py
artifactcache/huggingface/transformers/: __init__.py
artifactcache/nltk/: __init__.py
coverage/: class_index.html  function_index.html  index.html  status.json  tests_py.html  z_1fbe41425a2392c4___init___py.html  z_82614c31dcd71201___init___py.html  z_c363def257d8722d___init___py.html  z_c363def257d8722d__cachetypes_py.html  z_c363def257d8722d__centralized_location_py.html  z_c363def257d8722d__version_py.html  z_d165b5e2ed12e4b0___init___py.html  z_e29985a735466486___init___py.html  z_f7491cca31dc2bce___init___py.html
nltk/: __init__.py
transformers/: .gitignore  __init__.py
