[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "artifactcache"
description = "A minimalistic python package providing a convenient API to change the default download location for different libraries."
authors = [{name = "Impelon", email = "ovi.tatar@googlemail.com"}]
readme = "README.md"
license = {text = "BSD-2-Clause"}
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/Impelon/artifactcache.git"

[tool.setuptools.dynamic]
version = {attr = "artifactcache.__version__"}

[tool.setuptools.packages]
find = {}
